APPBUG-4155, Social Login: UI/UX Issue – The overall fields need to center aligned and *Required Information can be removed.
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@39521 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/social_login.css
+++ b/projects/Media/docroot/assets/css/social_login.css
@@ -1,10 +1,10 @@
 @CHARSET "ISO-8859-1";
 
 #sulCont.signup-style-social {
-	padding-left: 18px;
-	width: 462px;
+	/*padding-left: 18px;*/
+	width: 100%;
 	height: auto;
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 #sulCont.signin-social-forgot-pass{
 	padding-bottom: 30px;
@@ -117,6 +117,13 @@
 #sulCont .form-side-social #fd_login,
 #sulCont.login-page #fd_login{
 	margin-left: -22px;
+	margin-top:40px;
+}
+
+#sulCont .form-side-social #litesignup,
+#sulCont .form-side-social #fd_login table,
+#sulCont.login-page #fd_login table{
+	margin:auto;
 }
 
 #sulCont .password-class{
@@ -143,6 +150,11 @@
     border-radius: 3px;
 }
 
+#sulCont.social-singin .social-login-headerscr-social{
+	width: 440px;
+	margin:auto;
+}
+
 input[type="socialButton"] {
 	width: 130px;
 	padding: 10px;
@@ -155,7 +167,9 @@ input[type="socialButton"] {
 
 .social-login-social{
 	width: 238px;
+	/*width: initial;*/
 	min-height: 152px;
+	margin:auto;
 }
 #sulCont .form-side-social-header,
 #sulCont .signin-social-forgot-pass-header-message{
@@ -328,3 +342,20 @@ input[type="socialButton"] {
 	margin-left: -25px;
 }
 
+#yui-gen1{
+	text-align: center;
+}
+#yui-gen1 > table{
+	margin: auto;
+}
+#yui-gen1 > table .text13{
+	text-align: center;
+}
+
+.new_cust{
+	text-align: center;
+    display: block;
+}
+br.new_cust{
+	display:none;
+}
